# ING-AgenticAI

./: .coverage  .env.example  .gitignore  BRANCH_CONSOLIDATION.md  CHANGELOG.md  README.md  docker-compose.local.test.yml  docker-compose.local.yml  idea4.md  main.py  pyproject.toml  requirements.txt  run-test.ps1  run-test.sh  run.ps1  run.sh  setup.py
AgenticAI/: Dockerfile  RAGPipeline.py  __init__.py  main.py  setup.py
AgenticAI/Chunker/: Chunk.py  Chunker.py
AgenticAI/PDF/: Document.py  PDFParser.py  __init__.py
AgenticAI/Vectorization/: StoredChunk.py  VectorEmbedder.py  __init__.py
AgenticAI/agentic/: decision_logger.py  documents.py  langgraph_runner.py  models.py  pdf_report.py  pipeline_runner.py
AgenticAI/mcp/: client.py
AgenticAI/mcp_servers/: regulation_server.py
AgenticAI/pipeline/: ingestion.py
Backend/: main.py
Frontend/: Dockerfile
Frontend/ing-frontend/: next.config.ts  package-lock.json  package.json  tsconfig.json
TestBackend/: main.py  requirements.txt
data/: data.json
diagram/: process.drawio
documentation/: Architecture.d2  Architecture.drawio  BusinessFlow.d2  DesignAsCodeWorkflow.md  IngestionClassDiagram.d2  Project_Alignment.md  RAG_Architecture_Justification.md  SystemOverview.d2  SystemSequenceAgents.d2  UseCase.d2
tests/: test_api_endpoints.py  test_chunker_tables.py  test_coverage_helpers.py  test_e2e_http.py  test_ingestion_and_mcp.py  test_langgraph_additional.py  test_output_parsing.py  test_pdf_parser.py  test_pipeline_runner_run.py  test_rag_pipeline.py
visualizer/: index.html
(+55 files in other folders)
