[project]
name = "ing-agenticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu==1.12.0",
    "numpy==2.2.6",
    "pdfplumber==0.11.7",
    "pydantic==2.12.3",
    "pymilvus>=2.6.3",
    "python-dotenv>=1.2.1",
    "sentence-transformers==5.1.2",
]
